# MoMa_REST_Server

./: .env-example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  Walking.fbx  Walking_ascii.fbx  diag.puml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-build.yml
doc/: sequence.mmd  sequence.puml
src/: main.py
src/animators/: fast_fk_animator.py  vae_animator.py
src/core/: engine.py  env.py  interfaces.py  session_manager.py  utils.py
src/routers/: base_routes.py  vae_routes.py
