[project]
name = "MoMaRestServer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "fastapi>=0.124.0",
    "momafksolverproject",
    "skanym==0.1.8",
    "uvicorn[standard]>=0.38.0",
    "websockets>=15.0.1",
]

[tool.uv.sources]
#momafksolverproject = { path = "../MoMa_FK_Solver", editable = true }
momafksolverproject = { git = "https://github.com/HE-Arc/MoMa_FastFK_Solver.git" }
#skanym = { path = "C:/Users/antoine.lestrade/Documents/Projets/TM MotionMachine/skanym", editable = true }
skanym = { git = "https://gitlab-etu.ing.he-arc.ch/isc/general/motion-machine/skanym-package/skanym.git"}

